app/styles/main.scss
/* ... */
@media screen and (max-width: $break-small){
  #listings-page,
  #home-page {

    .main-col {
      display: block;
      width: 100%
    }

    .title-bar {

      .top {
        height: 120px;
      }

      .listing-location {
        margin-left: 0 !important;
      }
      
      .listing-nums {
        width: 100px;
        float: left;
        margin-top: 15px;
      }

      .add-spot-btn {
        margin-top: 5px;
      }

      .main-col {
        padding: 0;
      }

      .side-col {
        display: none;
      }

      .add-spot {
        float: right;
        margin: 15px 0 0 0;
      }

    }

    .listing {
      height: 100px;

      .spot-pic {
        height: 50px;
        width: 50px;
        margin-top: 0;
        display: inline-block;
      }

      .spot-pic {
        vertical-align: top;
        margin-top: 2px;
      }

      .info {
      }

      .title {
        @include text-overflow();
        font-size: 14px;
        margin-top: -3px;
        max-width: 180px;
      }

      .address {
        @include text-overflow();
        font-size: 11px;
        margin: -3px 0;
        max-width: 180px;
      }

      .rating {
        display: none;
      }

      .box {
        height: 20px;
        width: 20px;

        h6 {
          font-size: 8px;
          margin-top: 5px;
        }
      }

      .watchers {
        font-size: 10px;
      }

      .current-status {
        display: block;
        margin: 0 0 0 20px;
        width: 100%;

        .status {
          display: inline-block;
          font-size: 14px;
          float: left;
          margin: -40px 0 0 120px;
        }

        h4 {
          font-size: 12px;
        }
        h5 {
          font-size: 9px;
          margin-top: -5px;
        }
      }

      hr {
        width: 95%;
      }
    }

    .side-col {
      float: none;
      margin: 10px 0 0 10px;
      position: relative;
    }
  }
}

/******************
*** Home Page
*******************/
#home-page {
  min-height: 400px;

  .favit-text {
    color: $acc-dark;
  }

  .title-bar {
    padding-bottom: 0px;

    .listing-nums {
      width: 250px;
    }
  }

  .side-col {
    margin-bottom: 10px;
  }
}

@media screen and (max-width: $break-small){
  #home-page {
    .title-bar {
      .listing-nums {
        margin: 2px 0 0 0;
        width: 120px;
      }

      .favorites-title {
        margin: 0;
      }

      .top {
        height: auto;
      }
    }
  }
}
/* ... */

